Updated the research, data, and code pages.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,7 @@ Jason Mercer:
       url: "https://twitter.com/ecojydrology"
     - label: "GitHub"
       icon: "fab fa-fw fa-github-square"
-      url: "https://github.com/jmerc13"
+      url: "https://github.com/wetlandscapes"
     - label: "ResearchGate"
       icon: "fab fa-fw fa-researchgate"
       url: "https://www.researchgate.net/profile/Jason_Mercer3"
