--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ name                     : "Jason Mercer"
 description              : "Insights and ideas about aquatic ecosystems, modeling, etc."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "jmerc13" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "wetlandscapes" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 150
@@ -117,7 +117,7 @@ author:
       url: "https://twitter.com/ecojydrology"
     - label: "GitHub"
       icon: "fab fa-fw fa-github-square"
-      url: "https://github.com/jmerc13"
+      url: "https://github.com/wetlandscapes"
     - label: "ResearchGate"
       icon: "fab fa-fw fa-researchgate"
       url: "https://www.researchgate.net/profile/Jason_Mercer3"
